refactor(api): strengthen architecture and runtime safety
Separate application, domain, and infrastructure responsibilities; remove duplicate OAuth and chat-memory flows; harden transaction boundaries, rate limiting, media handling, and knowledge indexing; and add migrations plus comprehensive quality gates and tests.