@@ -1,12 +1,22 @@
 package com.caoqiang.blog.config;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
+import static org.mockito.Mockito.when;
 
-import tools.jackson.databind.ObjectMapper;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.concurrent.atomic.AtomicLong;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -16,10 +26,7 @@ import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.data.redis.core.script.DefaultRedisScript;
 import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.mock.web.MockHttpServletResponse;
-
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
+import tools.jackson.databind.ObjectMapper;
 
 @ExtendWith(MockitoExtension.class)
 class RateLimitFilterTest {
@@ -37,16 +44,15 @@ class RateLimitFilterTest {
     void setUp() {
         objectMapper = new ObjectMapper();
         BlogProperties blogProperties = new BlogProperties();
-        rateLimitFilter = new RateLimitFilter(redisTemplate, objectMapper, blogProperties);
+        rateLimitFilter =
+                new RateLimitFilter(redisTemplate, objectMapper, blogProperties, new ClientIpResolver(blogProperties));
     }
 
     @Test
     void allowsRequestsWithinLimit() throws ServletException, IOException {
         when(redisTemplate.execute(
-                org.mockito.ArgumentMatchers.<DefaultRedisScript<Long>>any(),
-                anyList(),
-                anyString()
-        )).thenReturn(1L);
+                        org.mockito.ArgumentMatchers.<DefaultRedisScript<Long>>any(), anyList(), anyString()))
+                .thenReturn(1L);
 
         MockHttpServletRequest request = new MockHttpServletRequest();
         request.setMethod("GET");
@@ -63,10 +69,8 @@ class RateLimitFilterTest {
     @Test
     void blocksRequestsOverLimit() throws ServletException, IOException {
         when(redisTemplate.execute(
-                org.mockito.ArgumentMatchers.<DefaultRedisScript<Long>>any(),
-                anyList(),
-                anyString()
-        )).thenReturn(61L);
+                        org.mockito.ArgumentMatchers.<DefaultRedisScript<Long>>any(), anyList(), anyString()))
+                .thenReturn(61L);
 
         MockHttpServletRequest request = new MockHttpServletRequest();
         request.setMethod("GET");
@@ -111,10 +115,8 @@ class RateLimitFilterTest {
     @Test
     void usesStricterLimitForLoginEndpoint() throws ServletException, IOException {
         when(redisTemplate.execute(
-                org.mockito.ArgumentMatchers.<DefaultRedisScript<Long>>any(),
-                anyList(),
-                anyString()
-        )).thenReturn(1L);
+                        org.mockito.ArgumentMatchers.<DefaultRedisScript<Long>>any(), anyList(), anyString()))
+                .thenReturn(1L);
 
         MockHttpServletRequest request = new MockHttpServletRequest();
         request.setMethod("POST");
@@ -130,10 +132,8 @@ class RateLimitFilterTest {
     @Test
     void usesStricterLimitForRegisterEndpoint() throws ServletException, IOException {
         when(redisTemplate.execute(
-                org.mockito.ArgumentMatchers.<DefaultRedisScript<Long>>any(),
-                anyList(),
-                anyString()
-        )).thenReturn(1L);
+                        org.mockito.ArgumentMatchers.<DefaultRedisScript<Long>>any(), anyList(), anyString()))
+                .thenReturn(1L);
 
         MockHttpServletRequest request = new MockHttpServletRequest();
         request.setMethod("POST");
@@ -147,12 +147,26 @@ class RateLimitFilterTest {
     }
 
     @Test
-    void allowsRequestWhenRedisIsUnavailable() throws ServletException, IOException {
+    void usesStricterLimitForVerificationCodeEndpoint() throws ServletException, IOException {
         when(redisTemplate.execute(
-                org.mockito.ArgumentMatchers.<DefaultRedisScript<Long>>any(),
-                anyList(),
-                anyString()
-        ))
+                        org.mockito.ArgumentMatchers.<DefaultRedisScript<Long>>any(), anyList(), anyString()))
+                .thenReturn(1L);
+
+        MockHttpServletRequest request = new MockHttpServletRequest();
+        request.setMethod("POST");
+        request.setRequestURI("/api/v1/auth/send-code");
+        MockHttpServletResponse response = new MockHttpServletResponse();
+
+        rateLimitFilter.doFilterInternal(request, response, filterChain);
+
+        verify(filterChain).doFilter(request, response);
+        assertEquals("3", response.getHeader("X-RateLimit-Limit"));
+    }
+
+    @Test
+    void usesLocalFallbackWhenRedisIsUnavailable() throws ServletException, IOException {
+        when(redisTemplate.execute(
+                        org.mockito.ArgumentMatchers.<DefaultRedisScript<Long>>any(), anyList(), anyString()))
                 .thenThrow(new IllegalStateException("redis unavailable"));
 
         MockHttpServletRequest request = new MockHttpServletRequest();
@@ -163,20 +177,48 @@ class RateLimitFilterTest {
         rateLimitFilter.doFilterInternal(request, response, filterChain);
 
         verify(filterChain).doFilter(request, response);
-        assertEquals("unavailable", response.getHeader("X-RateLimit-Policy"));
+        assertEquals("local-fallback", response.getHeader("X-RateLimit-Policy"));
     }
 
     @Test
-    void keepsDefaultRateLimitsSeparatePerMethodAndPath() throws ServletException, IOException {
+    void rateLimitsRedisFailureWarnings() {
+        AtomicLong now = new AtomicLong(1_000L);
+        BlogProperties blogProperties = new BlogProperties();
+        RateLimitFilter filter = new RateLimitFilter(
+                redisTemplate, objectMapper, blogProperties, new ClientIpResolver(blogProperties), now::get);
+
+        assertTrue(filter.shouldLogRedisFailure());
+        assertFalse(filter.shouldLogRedisFailure());
+        now.addAndGet(RateLimitFilter.REDIS_FAILURE_WARNING_INTERVAL_MILLIS);
+        assertTrue(filter.shouldLogRedisFailure());
+    }
+
+    @Test
+    void usesLocalFallbackWhenRedisReturnsNoCounter() throws ServletException, IOException {
+        when(redisTemplate.execute(
+                        org.mockito.ArgumentMatchers.<DefaultRedisScript<Long>>any(), anyList(), anyString()))
+                .thenReturn(null);
+        MockHttpServletRequest request = new MockHttpServletRequest();
+        request.setMethod("GET");
+        request.setRequestURI("/api/v1/contents");
+        MockHttpServletResponse response = new MockHttpServletResponse();
+
+        rateLimitFilter.doFilterInternal(request, response, filterChain);
+
+        verify(filterChain).doFilter(request, response);
+        assertEquals("local-fallback", response.getHeader("X-RateLimit-Policy"));
+        assertEquals("59", response.getHeader("X-RateLimit-Remaining"));
+    }
+
+    @Test
+    void usesABoundedDefaultBucketInsteadOfRawRequestPaths() throws ServletException, IOException {
         java.util.List<java.util.List<String>> keys = new ArrayList<>();
         when(redisTemplate.execute(
-                org.mockito.ArgumentMatchers.<DefaultRedisScript<Long>>any(),
-                anyList(),
-                anyString()
-        )).thenAnswer(invocation -> {
-            keys.add(new ArrayList<>(invocation.getArgument(1)));
-            return 1L;
-        });
+                        org.mockito.ArgumentMatchers.<DefaultRedisScript<Long>>any(), anyList(), anyString()))
+                .thenAnswer(invocation -> {
+                    keys.add(new ArrayList<>(invocation.getArgument(1)));
+                    return 1L;
+                });
 
         MockHttpServletRequest contents = new MockHttpServletRequest();
         contents.setMethod("GET");
@@ -188,8 +230,7 @@ class RateLimitFilterTest {
         profile.setRequestURI("/api/v1/me");
         rateLimitFilter.doFilterInternal(profile, new MockHttpServletResponse(), filterChain);
 
-        assertNotEquals(keys.get(0), keys.get(1));
-        assertTrue(keys.get(0).getFirst().contains("GET:/api/v1/contents"));
-        assertTrue(keys.get(1).getFirst().contains("GET:/api/v1/me"));
+        assertEquals(keys.get(0), keys.get(1));
+        assertTrue(keys.getFirst().getFirst().contains("GET:default"));
     }
 }
